--- a/style.css
+++ b/style.css
@@ -139,7 +139,7 @@ body {
 
 /* --- Navbar --- */
 .navbar {
-  position: fixed;
+  position: relative;
   top: 0;
   left: 0;
   width: 100%;
@@ -180,13 +180,13 @@ body {
 .hero-header {
   position: relative;
   width: 100%;
-  height: 50vh;
+  height: 40vh;
   display: flex;
   align-items: flex-end;
   justify-content: center;
   margin-bottom: 0;
   padding-bottom: 10px;
-  padding-top: 80px;
+  padding-top: 20px;
 }
 
 .hero-content-centered {
