--- a/style.css
+++ b/style.css
@@ -180,7 +180,8 @@ body {
 .hero-header {
   position: relative;
   width: 100%;
-  height: 40vh;
+  min-height: 30vh;
+  height: auto;
   display: flex;
   align-items: flex-end;
   justify-content: center;
